# call_that

./: meson.build  meson_options.txt
examples/: glfw_window.cc  meson.build
include/call_that/: config.hh  make_dispatch.hh  that_call.hh  user_ptr.hh
include/call_that/detail/: callback_entry.hh  callback_table.hh  dispatch_builder.hh  that_call_id.hh
include/call_that/ext/: glfw_cbs.hh
include/call_that/fwd/: call_that-fwd.hh
subprojects/: catch2-git.wrap  glfw-git.wrap  hana-git.wrap
subprojects/packagefiles/hana/: meson.build
tests/: meson.build
